fixed text overflow error

--- a/src/css/layout.css
+++ b/src/css/layout.css
@@ -19,7 +19,7 @@ header .login_register {
 }
 
 aside {
-    width: 12em;
+    width: 16em;
 }
 
 .login_register_form {
